src/objects/FAM__Batch_Delete_Control__c.object
<CustomObject>
    <description>Stores information relating to one batch run for deleting batches in Fixed Asset Management.</description>
    <fields>
        <fullName>FAM__Apex_Job_Id__c</fullName>
        <inlineHelpText>Unique Id for the batch job.</inlineHelpText>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAM__Batch_Process_Status__c</fullName>
        <formula>TEXT(FAM__Batch_Process__r.FAM__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The status of the associated batch process.</inlineHelpText>
        <label>Batch Process Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAM__Batch_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the associated batch process.</inlineHelpText>
        <label>Batch Process</label>
        <referenceTo>FAM__fflib_BatchProcess__c</referenceTo>
        <relationshipName>Batch_Deletion_Batch_Control</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAM__Process_Name__c</fullName>
        <formula>FAM__Batch_Process__r.FAM__ProcessName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The name of batch process.</inlineHelpText>
        <label>Process Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAM__Status__c</fullName>
        <inlineHelpText>The status of the batch job.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Batch Delete Control</label>
    <nameField>
        <displayFormat>FBDC-{000000000}</displayFormat>
        <label>Batch Delete Control Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Delete Control</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>